src/styles.css
/* You can add global styles to this file, and also import other style files */
/* You can add global styles to this file, and also import other style files */
/* Application-wide Styles */
h1, h2, h3 {
    text-align: center;
    margin-top: 2rem;
}

h1 {
    color: #369;
    font-size: 250%;
  }
h2, h3 {
    color: #444;
    font-weight: lighter;
}
body {
    margin: 2em;
}
body, input[type="text"], button {
    color: #888;
}
form {
    max-width: 40%;
    margin: 0 auto;
    padding: 1rem;
    background: #e9effc;
}
button {
    padding: 0.3rem 1rem;
}
/* everywhere else */
* {
    font-family: Arial, Helvetica, sans-serif;
}
nav {
    margin: 0 auto;
    width: 50%;
    display: flex;
    justify-content: space-between;
    margin-top: 3rem;
    text-align: center;
}

